--- a/api-gateway/Properties/launchSettings.json
+++ b/api-gateway/Properties/launchSettings.json
@@ -8,6 +8,13 @@
       "sslPort": 44362
     }
   },
+  "Ocelot": {
+    "commandName": "Project",
+    "environmentVariables": {
+      "ASPNETCORE_ENVIRONMENT": "Development"
+    },
+    "applicationUrl": "http://localhost:5013/"
+  },
   "profiles": {
     "http": {
       "commandName": "Project",
