--- a/api-gateway/api-gateway.csproj
+++ b/api-gateway/api-gateway.csproj
@@ -9,7 +9,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.7" />
     <PackageReference Include="Ocelot" Version="23.3.4" />
+    <PackageReference Include="Ocelot.Provider.Polly" Version="23.3.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="MMLib.SwaggerForOcelot" Version="8.3.2" />
   </ItemGroup>
 
 </Project>
